--- a/public/main.css
+++ b/public/main.css
@@ -4,11 +4,44 @@ body {
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     background-image: url('images/cityscape.jpg');
+    background-repeat: no-repeat;
+    background-color: #131205;
 }
 
 #title {
     font-family: 'Bungee', cursive;
-    font-size: 50px;
+    font-size: 80px;
+    margin: 10px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+li {
+    border: 1px black solid;
+    display: inline-block;
+    margin: 5px;
+    padding: 5px;
+    border-radius: 3px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.chapterList {
+    background-color: bisque;
+    width: 30%;
+    border: 3px black solid;
+    border-radius: 20px;
+    margin: 10px auto;
+    padding: 10px;
 }
 
 .chapter {
